# ark-substrate-examples

./: Cargo.toml  Justfile  benchmark.sh  results.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/ark-vrf/: Cargo.toml
pallets/ark-vrf/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  utils.rs
pallets/groth16/: Cargo.toml
pallets/groth16/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  utils.rs
pallets/hostcalls/: Cargo.toml
pallets/hostcalls/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  utils.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/vrf/: Cargo.toml  README.md
pallets/vrf/src/: benchmarking.rs  lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: benchmark.sh
