[package]
name = "minimal-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
polkadot-sdk = { workspace = true, features = [
	"pallet-balances",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"runtime",
] }
scale-info = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

# local pallet templates
pallet-minimal-template = { path = "../pallets/template", default-features = false}
pallet-ark-hostcalls = { path = "../pallets/hostcalls", default-features = false }

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = ["substrate-wasm-builder"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
	"pallet-minimal-template/std",
	"pallet-ark-hostcalls/std",
]
